--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
   <div class="modal-overlay" id="accessoriesegyptModal">
     <div class="modal-content">
       <!-- تم تعديل النص البديل والصورة الاحتياطية -->
-      <img src="ملابس.png" alt="شعار Accessories Egypt" onerror="this.src='https://placehold.co/120x120/2c2c2c/EAEAEA?text=Accessories';">
+      <img src="AccessoriesEgyptofficial.png" alt="شعار Accessories Egypt" onerror="this.src='https://placehold.co/120x120/2c2c2c/EAEAEA?text=Accessories';">
       <h3>Accessories Egypt Official</h3>
       <p>متجر متخصص في الأزياء الرجالية والتصاميم الحصرية. بيع إلكتروني.</p>
       <div class="modal-buttons">
@@ -541,3 +541,4 @@
 </body>
 
 </html>
+
