--- a/index.html
+++ b/index.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>بطاقة عرض شخصية</title>
-  
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <!-- ===== Meta & Social Preview Tags for AboElfadl Personal Card ===== -->
+
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>بطاقة عرض شخصية | AboElfadl</title>
+
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+<!-- Canonical & Language -->
+<link rel="canonical" href="https://mahm-oud.netlify.app/">
+<link rel="alternate" href="https://mahm-oud.netlify.app/" hreflang="ar">
+
+<!-- 🌐 Open Graph (Facebook / WhatsApp / Telegram / LinkedIn / Instagram) -->
+<meta property="og:title" content="AboElfadl — بطاقة عرض شخصية 💼" />
+<meta property="og:description" content="بطاقة عرض شخصية مميزة من AboElfadl تحتوي على بيانات التواصل وروابط المشاريع وأعمال الويب. تصميم عصري يبرز هوية المطور." />
+<meta property="og:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
+<meta property="og:image:alt" content="بطاقة شخصية AboElfadl" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="AboElfadl Personal Card" />
+<meta property="og:url" content="https://mahm-oud.netlify.app/" />
+<meta property="og:locale" content="ar_AR" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+<!-- 🟢 WhatsApp -->
+<meta property="og:title" content="AboElfadl — بطاقة عرض شخصية 💼" />
+<meta property="og:description" content="تعرف على مطور الويب AboElfadl عبر بطاقة العرض الشخصية. روابط، مهارات، ومشاريع في واجهة أنيقة وسريعة ⚡" />
+<meta property="og:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
+<meta property="og:url" content="https://mahm-oud.netlify.app/" />
+
+<!-- 💬 Telegram -->
+<meta name="telegram:channel" content="@aboelfadl" />
+<meta name="telegram:description" content="بطاقة شخصية لمطور الويب AboElfadl — تحتوي على بيانات التواصل وروابط المشاريع." />
+<meta name="telegram:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
+
+<!-- 📸 Instagram -->
+<meta name="instagram:title" content="AboElfadl — بطاقة عرض شخصية 💼" />
+<meta name="instagram:description" content="تعرف على أعمال ومشاريع AboElfadl من خلال البطاقة الشخصية التفاعلية الخاصة به." />
+<meta name="instagram:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
+<meta name="instagram:url" content="https://mahm-oud.netlify.app/" />
+
+<!-- 🐦 Twitter / X -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="AboElfadl — بطاقة عرض شخصية 💼" />
+<meta name="twitter:description" content="بطاقة تعريفية ذكية تعرض خبرات ومهارات مطور الويب AboElfadl في تصميم الواجهات وتطوير المواقع." />
+<meta name="twitter:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
+<meta name="twitter:image:alt" content="بطاقة شخصية AboElfadl" />
+
+<!-- 🔍 SEO -->
+<meta name="description" content="بطاقة عرض شخصية تفاعلية من AboElfadl — تحتوي على روابط التواصل، مهارات البرمجة، وأعمال مطور واجهات أمامية محترف. تصميم أنيق وسريع الاستجابة." />
+<meta name="keywords" content="AboElfadl, بطاقة شخصية, واجهات أمامية, مطور ويب, برمجة, HTML, CSS, JavaScript, UI Design, portfolio, Mahmoud AboElfadl" />
+<meta name="author" content="Mahmoud AboElfadl" />
+<meta name="robots" content="index, follow" />
+
+<!-- 🎨 Theme & Branding -->
+<link rel="icon" href="https://mahm-oud.netlify.app/mahmoud.png" type="image/png" />
+<meta name="theme-color" content="#FFD500" />
+<meta name="mobile-web-app-capable" content="yes" />
+
+<!-- 🧠 Structured Data (JSON-LD Schema) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Mahmoud AboElfadl",
+  "url": "https://mahm-oud.netlify.app/",
+  "image": "https://mahm-oud.netlify.app/mahmoud.png",
+  "description": "مطور واجهات أمامية يقدم حلول برمجية حديثة وتصميمات ويب احترافية. بطاقة تعريفية تحتوي على معلومات التواصل والمشاريع الشخصية.",
+  "jobTitle": "Frontend Developer",
+  "sameAs": [
+    "https://t.me/aboelfadl",
+    "https://www.instagram.com/aboelfadl",
+    "https://twitter.com/aboelfadl",
+    "https://www.linkedin.com/in/aboelfadl"
+  ]
+}
+</script>
+
     <link rel="icon" href="mahmoud.png" type="image/png">
   <style>
     :root {
@@ -873,4 +949,5 @@
 </body>
 
 </html>
+
 
