--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- 🌐 Open Graph (Facebook / WhatsApp / Telegram / LinkedIn / Instagram) -->
 <meta property="og:title" content="AboElfadl — تطوير الويب والبرمجة الحديثة 💻" />
 <meta property="og:description" content="موقع AboElfadl يقدّم حلولًا احترافية في تطوير الويب، تصميم واجهات المستخدم، وأدوات تفاعلية للمطورين. اكتشف مشاريع جاهزة وأفكار برمجية عصرية من مطور واجهات أمامية محترف.">
-<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta property="og:image" content="https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg" />
 <meta property="og:image:alt" content="شعار AboElfadl — تطوير الويب" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="AboElfadl" />
@@ -29,25 +29,25 @@
 <!-- 🟢 WhatsApp -->
 <meta property="og:title" content="AboElfadl — تطوير الويب والبرمجة الحديثة 💻" />
 <meta property="og:description" content="تعرّف على مشاريع وأدوات تطوير الويب المميزة من AboElfadl. ⚡ تصميم عصري واحتراف برمجي.">
-<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta property="og:image" content="https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg" />
 <meta property="og:url" content="https://web-aboelfadl.netlify.app/" />
 
 <!-- 💬 Telegram -->
 <meta name="telegram:channel" content="@aboelfadl" />
 <meta name="telegram:description" content="موقع AboElfadl — أحدث مشاريع وأدوات تطوير الويب، من مطور واجهات أمامية محترف." />
-<meta name="telegram:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta name="telegram:image" content="https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg" />
 
 <!-- 📸 Instagram -->
 <meta name="instagram:title" content="AboElfadl — تطوير الويب والبرمجة الحديثة 💻" />
 <meta name="instagram:description" content="شاهد أعمال ومشاريع AboElfadl في تطوير الويب وتصميم الواجهات الحديثة." />
-<meta name="instagram:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta name="instagram:image" content="https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg" />
 <meta name="instagram:url" content="https://web-aboelfadl.netlify.app/" />
 
 <!-- 🐦 Twitter / X -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="AboElfadl — تطوير الويب والبرمجة الحديثة 💻" />
 <meta name="twitter:description" content="حلول ذكية ومشاريع مميزة في عالم تطوير الويب وتصميم الواجهات. اكتشف أدوات وأفكار جديدة من AboElfadl.">
-<meta name="twitter:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta name="twitter:image" content="https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg" />
 <meta name="twitter:image:alt" content="شعار AboElfadl — تطوير الويب" />
 
 <!-- 🔍 SEO -->
@@ -57,7 +57,7 @@
 <meta name="robots" content="index, follow" />
 
 <!-- 🎨 Theme & Branding -->
-<link rel="icon" href="https://web-aboelfadl.netlify.app/mahmoud.jpeg" type="image/jpeg">
+<link rel="icon" href="https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg" type="image/jpeg">
 <meta name="theme-color" content="#FFD500" />
 <meta name="mobile-web-app-capable" content="yes" />
 
@@ -73,7 +73,7 @@
     "@type": "Person",
     "name": "Mahmoud AboElfadl"
   },
-  "image": "https://web-aboelfadl.netlify.app/mahmoud.jpeg",
+  "image": "https://aboelfadl-hacker.netlify.app/MA_HACKER.jpeg",
   "sameAs": [
     "https://t.me/aboelfadl",
     "https://www.instagram.com/aboelfadl",
@@ -596,4 +596,5 @@
    
 </body>
 </html>
+
 
