--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <!-- Optimized for Mahmoud_AboElfadl SEO -->
 <!-- ===== Meta & Social Preview Tags for MahmOud Website ===== -->
 
 <meta charset="UTF-8" />
@@ -23,8 +24,8 @@
 <link rel="alternate" href="https://mahm-oud.netlify.app/" hreflang="ar">
 
 <!-- 🌐 Open Graph (Facebook / WhatsApp / Telegram / LinkedIn / Instagram) -->
-<meta property="og:title" content="بطاقة عرض شخصية — MahmOud 💼" />
-<meta property="og:description" content="بطاقة شخصية رقمية من تصميم محمود أبو الفضل — تضم معلومات التواصل، المشاريع، وروابط الحسابات الرسمية بتصميم عصري واحترافي.">
+<meta property="og:title" content="بطاقة عرض شخصية — MahmOud 💼 | Mahmoud_AboElfadl"
+<meta property="og:description" content="بطاقة شخصية رقمية من تصميم محمود أبو الفضل — تضم معلومات التواصل، المشاريع، وروابط الحسابات الرسمية بتصميم عصري واحترافي. — Mahmoud_AboElfadl"
 <meta property="og:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
 <meta property="og:image:alt" content="بطاقة شخصية — محمود أبو الفضل" />
 <meta property="og:type" content="website" />
@@ -35,8 +36,8 @@
 <meta property="og:image:height" content="630" />
 
 <!-- 🟢 WhatsApp -->
-<meta property="og:title" content="بطاقة عرض شخصية — MahmOud 💼" />
-<meta property="og:description" content="اكتشف بطاقة العرض الشخصية لمحمود أبو الفضل — تضم بيانات التواصل وروابط الحسابات والمشاريع الاحترافية.">
+<meta property="og:title" content="بطاقة عرض شخصية — MahmOud 💼 | Mahmoud_AboElfadl"
+<meta property="og:description" content="اكتشف بطاقة العرض الشخصية لمحمود أبو الفضل — تضم بيانات التواصل وروابط الحسابات والمشاريع الاحترافية. — Mahmoud_AboElfadl"
 <meta property="og:image" content="https://mahm-oud.netlify.app/mahmoud.png" />
 <meta property="og:url" content="https://mahm-oud.netlify.app/" />
 
@@ -60,8 +61,8 @@
 
 <!-- 🔍 SEO -->
 <meta name="description" content="بطاقة عرض شخصية رقمية من تصميم محمود أبو الفضل — واجهة أنيقة تجمع بيانات التواصل وروابط الحسابات والمشاريع البرمجية بطريقة تفاعلية وعصرية.">
-<meta name="keywords" content="MahmOud, بطاقة عرض شخصية, بطاقة تعريف رقمية, محمود أبو الفضل, واجهة شخصية, مطور ويب, واجهات أمامية, portfolio, personal card">
-<meta name="author" content="Mahmoud AboElfadl" />
+<meta name="keywords" content=""Mahmoud_AboElfadl, MahmOud, بطاقة عرض شخصية, بطاقة تعريف رقمية, محمود أبو الفضل, واجهة شخصية, مطور ويب, واجهات أمامية, portfolio, personal card">
+<meta name="author" content="Mahmoud_AboElfadl"
 <meta name="robots" content="index, follow" />
 
 <!-- 🎨 Theme & Branding -->
@@ -69,8 +70,7 @@
 <meta name="mobile-web-app-capable" content="yes" />
 
 <!-- 🧠 Structured Data (JSON-LD Schema) -->
-<script type="application/ld+json">
-{
+<script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "MahmOud",
@@ -78,7 +78,7 @@
   "description": "بطاقة عرض شخصية رقمية من تصميم محمود أبو الفضل — واجهة أنيقة تجمع معلوماته وروابط تواصله ومشاريعه.",
   "publisher": {
     "@type": "Person",
-    "name": "Mahmoud AboElfadl"
+    "name": "Mahmoud_AboElfadl"
   },
   "image": "https://mahm-oud.netlify.app/mahmoud.png",
   "sameAs": [
@@ -87,8 +87,7 @@
     "https://twitter.com/aboelfadl",
     "https://www.linkedin.com/in/aboelfadl"
   ]
-}
-</script>
+}</script>
 
     <link rel="icon" href="mahmoud.png" type="image/png">
   <style>
