--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
   },
   "image": "https://web-aboelfadl.netlify.app/mahmoud.jpeg",
   "sameAs": [
-    "https://t.me/aboelfadl",
-    "https://www.instagram.com/aboelfadl",
-    "https://twitter.com/aboelfadl",
-    "https://www.linkedin.com/in/aboelfadl"
+    "https://t.me/Mahmoud_AboElfadl_2016",
+    "https://www.instagram.com/Mahmoud.AboElfadl.2016",
+    "https://twitter.com/Mahmoud.AboElfadl.2016",
+    "https://www.linkedin.com/in/Mahmoud.AboElfadl.2016"
   ]
 }</script>
 
@@ -723,13 +723,13 @@
       <div class="social-links">
         
         <div class="cyber-buttons-container">
-          <div class="radio-wrapper" onclick="window.open('https://web.facebook.com/AboElfadl.Official/', '_blank' )">
+          <div class="radio-wrapper" onclick="window.open('https://web.facebook.com/Mahmoud.AboElfadl.2016/', '_blank' )">
             <div class="btn">Facebook</div>
           </div>
-          <div class="radio-wrapper" onclick="window.open('https://www.instagram.com/aboelfadl.official/', '_blank' )">
+          <div class="radio-wrapper" onclick="window.open('https://www.instagram.com/Mahmoud.AboElfadl.2016/', '_blank' )">
             <div class="btn">Instagram</div>
           </div>
-          <div class="radio-wrapper" onclick="window.open('https://t.me/Mahmoud_IbrahimAboElfadl', '_blank' )">
+          <div class="radio-wrapper" onclick="window.open('https://t.me/Mahmoud_AboElfadl_2016', '_blank' )">
             <div class="btn">Telegram</div>
           </div>
           <!-- !!! تم تصحيح الرابط هنا !!! -->
@@ -957,6 +957,7 @@
 </body>
 
 </html>
+
 
 
 
