--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>QR Scanner Pro — ABO-ELFADL OS V9.0 | ماسح ومولد أكواد 🛡️</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-<link rel="canonical" href="https://mahmoud-aboelfadl-2005.netlify.app/">
-<link rel="alternate" href="https://mahmoud-aboelfadl-2005.netlify.app/" hreflang="ar">
+<link rel="canonical" href="https://qr-abo-elfadl.netlify.app/">
+<link rel="alternate" href="https://qr-abo-elfadl.netlify.app/" hreflang="ar">
 
 <meta property="og:title" content="ABO-ELFADL QR OS — نظام مسح وتحليل الأكواد الأمنية 🛡️ | Mahmoud_AboElfadl">
 <meta property="og:description" content="أقوى أداة ويب لمسح وتوليد أكواد QR. ميزات حصرية: تحليل أمني للروابط، كشف التصيد، مشاركة Wi-Fi مشفرة، واستخراج تقارير جنائية. نظام AboElfadl OS V9.0 ⚡">
-<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta property="og:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
 <meta property="og:image:alt" content="ABO-ELFADL QR OS - Security Scanner" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="ABO-ELFADL QR OS" />
-<meta property="og:url" content="https://mahmoud-aboelfadl-2005.netlify.app/" />
+<meta property="og:url" content="https://qr-abo-elfadl.netlify.app/" />
 <meta property="og:locale" content="ar_AR" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
 <meta property="og:title" content="ABO-ELFADL QR OS — ماسح ومولد QR أمني 🛡️">
 <meta property="og:description" content="افحص الروابط، اكشف الاحتيال، وولد أكواد Wi-Fi بأمان تام مع نظام أبو الفضل V9.0 ⚡">
-<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
-<meta property="og:url" content="https://mahmoud-aboelfadl-2005.netlify.app/" />
+<meta property="og:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta property="og:url" content="https://qr-abo-elfadl.netlify.app/" />
 
 <meta name="telegram:channel" content="@aboelfadl" />
 <meta name="telegram:description" content="أداة ABO-ELFADL QR OS: ماسح ضوئي متقدم، تحليل روابط خبيثة، وتوليد QR مشفر. الحماية والأداء في مكان واحد." />
-<meta name="telegram:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta name="telegram:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
 
 <meta name="instagram:title" content="ABO-ELFADL QR OS — أدوات مسح أمني متقدمة 🛡️" />
 <meta name="instagram:description" content="جرب الإصدار التاسع V9.0: فحص QR، تقارير أمنية، واجهة Cyberpunk، وحماية من الاختراق. ⚡" />
-<meta name="instagram:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
-<meta name="instagram:url" content="https://mahmoud-aboelfadl-2005.netlify.app/" />
+<meta name="instagram:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta name="instagram:url" content="https://qr-abo-elfadl.netlify.app/" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="ABO-ELFADL QR OS — ماسح ومولد أكواد ذكي 🛡️" />
 <meta name="twitter:description" content="الأداة الشاملة للتعامل مع QR Codes: فحص فوري، كشف تلغيم الروابط، وتوليد أكواد الشبكات. تطوير Mahmoud AboElfadl 💡">
-<meta name="twitter:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta name="twitter:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
 <meta name="twitter:image:alt" content="ABO-ELFADL QR Scanner Interface" />
 
 <meta name="description" content="ABO-ELFADL QR OS V9.0: أداة ويب متقدمة لمسح وتوليد رموز QR. تدعم تحليل الروابط الخبيثة (Phishing)، كشف كلمات مرور Wi-Fi، وتصدير تقارير PDF جنائية. واجهة احترافية وآمنة.">
@@ -46,7 +46,7 @@
 <meta name="author" content="Mahmoud_AboElfadl">
 <meta name="robots" content="index, follow" />
 
-<link rel="icon" href="https://web-aboelfadl.netlify.app/mahmoud.jpeg" type="image/png">
+<link rel="icon" href="https://qr-abo-elfadl.netlify.app/QR.png" type="image/png">
 <meta name="theme-color" content="#dc2626" />
 <meta name="mobile-web-app-capable" content="yes" />
 
@@ -54,13 +54,13 @@
   "@context": "https://schema.org",
   "@type": "WebApplication",
   "name": "ABO-ELFADL QR OS",
-  "url": "https://mahmoud-aboelfadl-2005.netlify.app/",
+  "url": "https://qr-abo-elfadl.netlify.app/",
   "description": "نظام ويب متكامل لمسح وتوليد رموز QR مع خصائص أمنية لكشف الاحتيال وتحليل البيانات.",
   "publisher": {
     "@type": "Person",
     "name": "Mahmoud_AboElfadl"
   },
-  "image": "https://web-aboelfadl.netlify.app/mahmoud.jpeg",
+  "image": "https://qr-abo-elfadl.netlify.app/QR.png",
   "applicationCategory": "UtilitiesApplication",
   "operatingSystem": "Web",
   "sameAs": [
