Update title and canonical links in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>QR Scanner Pro — ABO-ELFADL OS V9.0 | ماسح ومولد أكواد 🛡️</title>
+<title>PROFILE - MAHMOUD ABO-ELFADL</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-<link rel="canonical" href="https://qr-abo-elfadl.netlify.app/">
-<link rel="alternate" href="https://qr-abo-elfadl.netlify.app/" hreflang="ar">
+<link rel="canonical" href="https://mahmoud-aboelfadl-2005.netlify.app/">
+<link rel="alternate" href="https://mahmoud-aboelfadl-2005.netlify.app/" hreflang="ar">
 
 <meta property="og:title" content="ABO-ELFADL QR OS — نظام مسح وتحليل الأكواد الأمنية 🛡️ | Mahmoud_AboElfadl">
 <meta property="og:description" content="أقوى أداة ويب لمسح وتوليد أكواد QR. ميزات حصرية: تحليل أمني للروابط، كشف التصيد، مشاركة Wi-Fi مشفرة، واستخراج تقارير جنائية. نظام AboElfadl OS V9.0 ⚡">
