--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta property="og:title" content="ABO-ELFADL QR OS — نظام مسح وتحليل الأكواد الأمنية 🛡️ | Mahmoud_AboElfadl">
 <meta property="og:description" content="أقوى أداة ويب لمسح وتوليد أكواد QR. ميزات حصرية: تحليل أمني للروابط، كشف التصيد، مشاركة Wi-Fi مشفرة، واستخراج تقارير جنائية. نظام AboElfadl OS V9.0 ⚡">
-<meta property="og:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
 <meta property="og:image:alt" content="ABO-ELFADL QR OS - Security Scanner" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="ABO-ELFADL QR OS" />
@@ -23,7 +23,7 @@
 
 <meta property="og:title" content="ABO-ELFADL QR OS — ماسح ومولد QR أمني 🛡️">
 <meta property="og:description" content="افحص الروابط، اكشف الاحتيال، وولد أكواد Wi-Fi بأمان تام مع نظام أبو الفضل V9.0 ⚡">
-<meta property="og:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
 <meta property="og:url" content="https://qr-abo-elfadl.netlify.app/" />
 
 <meta name="telegram:channel" content="@aboelfadl" />
@@ -38,7 +38,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="ABO-ELFADL QR OS — ماسح ومولد أكواد ذكي 🛡️" />
 <meta name="twitter:description" content="الأداة الشاملة للتعامل مع QR Codes: فحص فوري، كشف تلغيم الروابط، وتوليد أكواد الشبكات. تطوير Mahmoud AboElfadl 💡">
-<meta name="twitter:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta name="twitter:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
 <meta name="twitter:image:alt" content="ABO-ELFADL QR Scanner Interface" />
 
 <meta name="description" content="ABO-ELFADL QR OS V9.0: أداة ويب متقدمة لمسح وتوليد رموز QR. تدعم تحليل الروابط الخبيثة (Phishing)، كشف كلمات مرور Wi-Fi، وتصدير تقارير PDF جنائية. واجهة احترافية وآمنة.">
@@ -46,7 +46,7 @@
 <meta name="author" content="Mahmoud_AboElfadl">
 <meta name="robots" content="index, follow" />
 
-<link rel="icon" href="https://qr-abo-elfadl.netlify.app/QR.png" type="image/png">
+<link rel="icon" href="https://web-aboelfadl.netlify.app/mahmoud.jpeg" type="image/png">
 <meta name="theme-color" content="#dc2626" />
 <meta name="mobile-web-app-capable" content="yes" />
 
