Update image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta property="og:title" content="ABO-ELFADL QR OS — نظام مسح وتحليل الأكواد الأمنية 🛡️ | Mahmoud_AboElfadl">
 <meta property="og:description" content="أقوى أداة ويب لمسح وتوليد أكواد QR. ميزات حصرية: تحليل أمني للروابط، كشف التصيد، مشاركة Wi-Fi مشفرة، واستخراج تقارير جنائية. نظام AboElfadl OS V9.0 ⚡">
-<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta property="og:image" content="https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png" />
 <meta property="og:image:alt" content="ABO-ELFADL QR OS - Security Scanner" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="ABO-ELFADL QR OS" />
@@ -23,22 +23,22 @@
 
 <meta property="og:title" content="ABO-ELFADL QR OS — ماسح ومولد QR أمني 🛡️">
 <meta property="og:description" content="افحص الروابط، اكشف الاحتيال، وولد أكواد Wi-Fi بأمان تام مع نظام أبو الفضل V9.0 ⚡">
-<meta property="og:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta property="og:image" content="https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png" />
 <meta property="og:url" content="https://qr-abo-elfadl.netlify.app/" />
 
 <meta name="telegram:channel" content="@aboelfadl" />
 <meta name="telegram:description" content="أداة ABO-ELFADL QR OS: ماسح ضوئي متقدم، تحليل روابط خبيثة، وتوليد QR مشفر. الحماية والأداء في مكان واحد." />
-<meta name="telegram:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta name="telegram:image" content="https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png" />
 
 <meta name="instagram:title" content="ABO-ELFADL QR OS — أدوات مسح أمني متقدمة 🛡️" />
 <meta name="instagram:description" content="جرب الإصدار التاسع V9.0: فحص QR، تقارير أمنية، واجهة Cyberpunk، وحماية من الاختراق. ⚡" />
-<meta name="instagram:image" content="https://qr-abo-elfadl.netlify.app/QR.png" />
+<meta name="instagram:image" content="https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png" />
 <meta name="instagram:url" content="https://qr-abo-elfadl.netlify.app/" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="ABO-ELFADL QR OS — ماسح ومولد أكواد ذكي 🛡️" />
 <meta name="twitter:description" content="الأداة الشاملة للتعامل مع QR Codes: فحص فوري، كشف تلغيم الروابط، وتوليد أكواد الشبكات. تطوير Mahmoud AboElfadl 💡">
-<meta name="twitter:image" content="https://web-aboelfadl.netlify.app/mahmoud.jpeg" />
+<meta name="twitter:image" content="https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png" />
 <meta name="twitter:image:alt" content="ABO-ELFADL QR Scanner Interface" />
 
 <meta name="description" content="ABO-ELFADL QR OS V9.0: أداة ويب متقدمة لمسح وتوليد رموز QR. تدعم تحليل الروابط الخبيثة (Phishing)، كشف كلمات مرور Wi-Fi، وتصدير تقارير PDF جنائية. واجهة احترافية وآمنة.">
@@ -46,7 +46,7 @@
 <meta name="author" content="Mahmoud_AboElfadl">
 <meta name="robots" content="index, follow" />
 
-<link rel="icon" href="https://web-aboelfadl.netlify.app/mahmoud.jpeg" type="image/png">
+<link rel="icon" href="https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png" type="image/png">
 <meta name="theme-color" content="#dc2626" />
 <meta name="mobile-web-app-capable" content="yes" />
 
@@ -60,7 +60,7 @@
     "@type": "Person",
     "name": "Mahmoud_AboElfadl"
   },
-  "image": "https://qr-abo-elfadl.netlify.app/QR.png",
+  "image": "https://mahmoud-aboelfadl-2005.netlify.app/mahmoud.png",
   "applicationCategory": "UtilitiesApplication",
   "operatingSystem": "Web",
   "sameAs": [
